# carla-ros-AV-stack

./: README.md
src/: launch_sim.sh
src/carla_environment/: package.xml  setup.cfg  setup.py
src/carla_environment/carla_environment/: camera_yolo_node.py  ekf_tracker.py  lidar_cluster_node.py  online_evaluator.py  spawn_lead_vehicle.py  spawn_traffic_node.py  spawn_vehicle_w_sensors.py
src/carla_environment/config/: sensors.yaml
src/carla_environment/launch/: data_collection.launch.py  sensor_output.rviz  spawn_vehicle.launch.py  traffic_bench.launch.py
src/carla_localization_benchmark/: package.xml  setup.cfg  setup.py
src/carla_localization_benchmark/carla_localization_benchmark/: carla_gt_publisher.py  csv_logger.py  ego_gt_odom.py  ekf_localizer.py  gnss_adapter.py  imu_adapter.py  live_plotter.py  measurement_mux.py  metrics_node.py  noise_sensor.py  noise_sensors.py  spawn_vehicle_w_sensors.py  speed_adapter.py  utils.py
src/carla_localization_benchmark/config/: params.yaml  sensors.yaml
src/carla_localization_benchmark/launch/: benchmark.launch.py  ego_loc_benchmark.launch.py  rl_localization.launch.py
