<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_environment</name>
  <version>0.0.1</version>
  <description>ROS 2 interface for spawning and managing ego vehicle and sensors in CARLA simulation.</description>

  <maintainer email="nico.brown.av@gmail.com">nic</maintainer>
  <license>MIT</license>

  <!-- Required runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Optional: For using TF broadcast -->
  <depend>tf2_msgs</depend>

  <!-- Build/test tools -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

